snapshots/syntax/library/functions/environment/getautoserversettings/getautoserversettings_debug_print.snap
---
source: vb6parse/src/syntax/library/functions/environment/getautoserversettings.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: Identifier
          text: Debug
        - kind: PeriodOperator
          text: "."
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Settings: \""
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: GetAutoServerSettings
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: progID
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: clsID
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: serverName
        - kind: RightParenthesis
          text: )
