snapshots/syntax/library/functions/environment/getautoserversettings/getautoserversettings_file_output.snap
---
source: src/syntax/library/functions/environment/getautoserversettings.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: PrintStatement
      children:
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: Octothorpe
          text: "#"
        - kind: Identifier
          text: fileNum
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Server: \""
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: serverName
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\" Settings: \""
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: GetAutoServerSettings
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: progID
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: clsID
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: serverName
        - kind: RightParenthesis
          text: )
